@@ -13,6 +13,11 @@ debugdir="${RPM_BUILD_ROOT}/usr/lib/debug"
 
 echo -n > $SOURCEFILE
 
+strip_to_debug()
+{
+  eu-strip --remove-comment -f "$1" "$2" || :
+}
+
 # Strip ELF binaries
 for f in `find $RPM_BUILD_ROOT ! -path "${debugdir}/*.debug" -type f \( -perm -0100 -or -perm -0010 -or -perm -0001 \) -exec file {} \; | \
 	sed -n -e 's/^\(.*\):[ 	]*.*ELF.*, not stripped/\1/p'`
@@ -35,10 +40,10 @@ do
 
 	mkdir -p "${debugdn}"
 	if test -w "$f"; then
-		eu-strip -f "${debugfn}" "$f" || :
+		strip_to_debug "${debugfn}" "$f"
 	else
 		chmod u+w "$f"
-		eu-strip -f "${debugfn}" "$f" || :
+		strip_to_debug "${debugfn}" "$f"
 		chmod u-w "$f"
 	fi
 done
