@@ -4,6 +4,8 @@
 	- ignore %excluded files for size
 	- add debugging labels for pre/post trans scriptlet execution.
 	- sqlite: path to find internal sqlite3.h
+	- debuginfo: canonicalize paths (#165434).
+	- debuginfo: pass --remove-comment switch (#165418).
 
 4.4.1 -> 4.4.2:
 	- start 4.4.2 devel.
